--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "watch-it",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://watch-it-h9b6.onrender.com/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
